# dineQR

./: .gitignore  README.md  base.html  db.sqlite3  environment.yml  exported_menu.json  generate_qrs.py  manage.py  menu.html  menu_data.json  order_success.html  pyproject.toml  pyrightconfig.json  requirements.txt
core/: admin.py  menu_urls.py  models.py  settings.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/templates/admin/: login.html  (+8 more)
dineQR/: asgi.py  settings.py  urls.py  wsgi.py
orders/: admin.py  ai_utils.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_order_total_price_alter_review_rating.py  0003_review_order_alter_review_menu_item_and_more.py  0004_order_is_paid_order_paid_at_review_sentiment.py  0004_waitercall_menuitem_best_seller_and_more.py  0005_kitchenbroadcast_tablesession_and_more.py  0005_menuitem_best_seller_menuitem_preparation_time_and_more.py  0005_tablesession.py  0006_remove_menuitem_best_seller_menuitem_is_featured.py  0006_waitercall.py  0007_alter_waitercall_reason.py  0007_tablesession.py  0008_delete_tablesession.py  0008_order_paid_amount_orderitem_paid_quantity.py  0009_alter_menuitem_spice_level.py  0010_alter_menuitem_spice_level.py  0011_kitchenbroadcast_alter_menuitem_spice_level.py
static/js/: cart.js  status.js
templates/orders/: base.html  bill_print.html  cart_detail.html  kitchen.html  kitchen_base.html  login.html  management_base.html  management_dashboard.html  menu.html  order_review.html  order_success.html  owner_dashboard.html  review_form.html  staff_base.html
(+1 files in other folders)
