[project]
name = "dineqr"
version = "0.1.0"
description = "dineQR"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django",
    "django-environ",
    "djangorestframework",
    "pillow",
    "vaderSentiment",
    "pandas",
    "django-jazzmin",
    "qrcode",
    "django-stubs",
]
